# nice-bike-roundtrips-rs

./: .gitignore  Cargo.toml  README.md  TAGS.md
resources/: config.toml  config.toml.example  dortmund_sued.osm.pbf
src/: graph.rs  lib.rs  main.rs  parser.rs  router.rs
src/parser/: data.rs  network.rs  surrounding.rs
src/router/: postprocessor.rs  preprocessor.rs
