[package]
name = "nice-bike-roundtrips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h3o = { version = "0.3.1", features = ["geo", "arbitrary", "serde"] }
geo = "0.24.1"
osmpbfreader = "0.16.0"
smartstring = "1.0.1"
gpx = { version = "0.8.6", features = ["serde"] }
toml = "0.7.3"
serde = "1.0.160"
priority-queue = "1.3.1"

