[package]
name = "nice-bike-roundtrips"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
h3o = { version = "0.8.0", features = ["geo", "arbitrary", "serde"] }
geo = "0.30.0"
osmpbfreader = "0.19.0"
smartstring = "1.0.1"
gpx = { version = "0.10.0", features = ["serde"] }
toml = "0.8.20"
serde = "1.0.160"
priority-queue = "2.3.1"
ordered-float = "5.0.0"
rand = "0.9.0"

